security.tf
resource "aws_security_group" "allow-ssh" {
    vpc_id = aws_vpc.main.id
    name = "allow_ssh"
    description = "Securuty group that allows SSH to hosts"
    egress {
      from_port = 0
      to_port = 0
      protocol = "1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "allow_ssh"
    }
}
